--- a/src/pages/EventIdPage/EventIdPage.module.scss
+++ b/src/pages/EventIdPage/EventIdPage.module.scss
@@ -47,5 +47,14 @@
         margin-top: 20px;
       }
     }
+    .error {
+      color: #dd2626;
+    }
+    .loading {
+      color: #287ff1;
+    }
+    .success {
+      color: #0bc136;
+    }
   }
 }
