--- a/src/pages/Projects/Project.module.scss
+++ b/src/pages/Projects/Project.module.scss
@@ -6,6 +6,16 @@
       color: #333;
       line-height: 60px;
       font-weight: 500;
+      margin-bottom: 30px;
+    }
+    p {
+      margin-top: 10px;
+      font-size: 18px;
+      color: #000;
+      font-weight: 400;
+    }
+    .text__item {
+      margin-left: 20px;
     }
   }
 }
