--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -18,4 +18,12 @@
       margin-left: 20px;
     }
   }
+  @media(max-width: 750px){
+    h1{
+      font-size: 3.5rem !important;
+    }
+    p{
+      font-size: 14px !important;
+    }
+  }
 }
