--- a/src/pages/Contacts/Contacts.module.scss
+++ b/src/pages/Contacts/Contacts.module.scss
@@ -9,7 +9,6 @@
   }
   .contacts__content {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
     padding-top: 30px;
@@ -46,6 +45,35 @@
         width: 670px;
         height: auto;
       }
+    }
+  }
+  @media (max-width: 1100px) {
+    .contacts__img {
+      img {
+        width: 500px !important;
+      }
+    }
+  }
+
+  @media (max-width: 900px) {
+    .contacts__content {
+      flex-direction: column;
+      padding-top: 0px !important;
+      padding-left: 00px !important;
+      align-items: flex-start !important;
+      .contacts__item {
+        margin-top: 20px !important;
+      }
+      .contacts__img {
+        img {
+          margin-top: 20px;
+        }
+      }
+    }
+  }
+  @media (max-width: 500px) {
+    img {
+      max-width: 100% !important;
     }
   }
 }
