--- a/src/pages/DonationDetails/DonationDetails.module.scss
+++ b/src/pages/DonationDetails/DonationDetails.module.scss
@@ -14,7 +14,6 @@
         color: #333;
         font-weight: 400;
         margin: 20px 0;
-        
       }
       h3 {
         margin-top: 10px;
@@ -28,6 +27,18 @@
         color: #333;
         font-weight: 400;
       }
+    }
+  }
+  @media (max-width: 700px) {
+    h1 {
+      font-size: 3.5rem !important;
+    }
+    h2 {
+      font-size: 16px !important;
+    }
+    h3,
+    span {
+      font-size: 16px !important;
     }
   }
 }
