--- a/src/pages/News/News.module.scss
+++ b/src/pages/News/News.module.scss
@@ -34,11 +34,6 @@
           align-items: flex-start;
           justify-content: space-between;
           h3 {
-            font-size: 1.5rem;
-            color: var(--green);
-            cursor: pointer;
-          }
-          h3 {
             font-size: 30px;
             font-weight: 400;
             color: #000;
@@ -57,6 +52,26 @@
             position: absolute;
             bottom: 20px;
           }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 750px) {
+  .news__container {
+    width: 90%;
+    .box {
+      width: 100%;
+      img {
+        width: 100%;
+      }
+      .content {
+        h3 {
+          font-size: 24px !important;
+        }
+        p {
+          font-size: 12px !important;
         }
       }
     }
